// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The RyskSDK > should initialise correctly with all config parameters passed 1`] = `
RyskSDK {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthorization": [Function],
    "nonceManager": undefined,
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "sign": [Function],
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": 421614,
  "ciaoAddress": "0x71728FDDF90233cc35D61bec7858d7c42A310ACe",
  "deposit": [Function],
  "domain": {
    "chainId": 421614n,
    "name": "rysk",
    "verifyingContract": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getAccountHealth": [Function],
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [
    {
      "msg": "Debug mode enabled",
    },
  ],
  "placeOrder": [Function],
  "placeOrders": [Function],
  "publicClient": {
    "account": undefined,
    "batch": undefined,
    "cacheTime": 4000,
    "call": [Function],
    "ccipRead": undefined,
    "chain": {
      "blockExplorers": {
        "default": {
          "apiUrl": "https://api-sepolia.arbiscan.io/api",
          "name": "Arbiscan",
          "url": "https://sepolia.arbiscan.io",
        },
      },
      "contracts": {
        "multicall3": {
          "address": "0xca11bde05977b3631167028862be2a173976ca11",
          "blockCreated": 81930,
        },
      },
      "fees": undefined,
      "formatters": undefined,
      "id": 421614,
      "name": "Arbitrum Sepolia",
      "nativeCurrency": {
        "decimals": 18,
        "name": "Arbitrum Sepolia Ether",
        "symbol": "ETH",
      },
      "rpcUrls": {
        "default": {
          "http": [
            "https://sepolia-rollup.arbitrum.io/rpc",
          ],
        },
      },
      "serializers": undefined,
      "testnet": true,
    },
    "createBlockFilter": [Function],
    "createContractEventFilter": [Function],
    "createEventFilter": [Function],
    "createPendingTransactionFilter": [Function],
    "estimateContractGas": [Function],
    "estimateFeesPerGas": [Function],
    "estimateGas": [Function],
    "estimateMaxPriorityFeePerGas": [Function],
    "extend": [Function],
    "getBalance": [Function],
    "getBlobBaseFee": [Function],
    "getBlock": [Function],
    "getBlockNumber": [Function],
    "getBlockTransactionCount": [Function],
    "getBytecode": [Function],
    "getChainId": [Function],
    "getCode": [Function],
    "getContractEvents": [Function],
    "getEip712Domain": [Function],
    "getEnsAddress": [Function],
    "getEnsAvatar": [Function],
    "getEnsName": [Function],
    "getEnsResolver": [Function],
    "getEnsText": [Function],
    "getFeeHistory": [Function],
    "getFilterChanges": [Function],
    "getFilterLogs": [Function],
    "getGasPrice": [Function],
    "getLogs": [Function],
    "getProof": [Function],
    "getStorageAt": [Function],
    "getTransaction": [Function],
    "getTransactionConfirmations": [Function],
    "getTransactionCount": [Function],
    "getTransactionReceipt": [Function],
    "key": "public",
    "multicall": [Function],
    "name": "Public Client",
    "pollingInterval": 4000,
    "prepareTransactionRequest": [Function],
    "readContract": [Function],
    "request": [Function],
    "sendRawTransaction": [Function],
    "simulateContract": [Function],
    "transport": {
      "fetchOptions": undefined,
      "key": "http",
      "name": "HTTP JSON-RPC",
      "request": [Function],
      "retryCount": 3,
      "retryDelay": 150,
      "timeout": 10000,
      "type": "http",
      "url": "https://test-rpc.quiknode.pro",
    },
    "type": "publicClient",
    "uid": "test-uid",
    "uninstallFilter": [Function],
    "verifyMessage": [Function],
    "verifySiweMessage": [Function],
    "verifyTypedData": [Function],
    "waitForTransactionReceipt": [Function],
    "watchBlockNumber": [Function],
    "watchBlocks": [Function],
    "watchContractEvent": [Function],
    "watchEvent": [Function],
    "watchPendingTransactions": [Function],
  },
  "rpc": "https://test-rpc.quiknode.pro",
  "subAccountId": 2,
  "verifierAddress": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
  "withdraw": [Function],
}
`;

exports[`The RyskSDK > should initialise correctly with only required params 1`] = `
RyskSDK {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthorization": [Function],
    "nonceManager": undefined,
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "sign": [Function],
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": 421614,
  "ciaoAddress": "0x71728FDDF90233cc35D61bec7858d7c42A310ACe",
  "deposit": [Function],
  "domain": {
    "chainId": 421614n,
    "name": "rysk",
    "verifyingContract": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getAccountHealth": [Function],
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [],
  "placeOrder": [Function],
  "placeOrders": [Function],
  "publicClient": {
    "account": undefined,
    "batch": undefined,
    "cacheTime": 4000,
    "call": [Function],
    "ccipRead": undefined,
    "chain": {
      "blockExplorers": {
        "default": {
          "apiUrl": "https://api-sepolia.arbiscan.io/api",
          "name": "Arbiscan",
          "url": "https://sepolia.arbiscan.io",
        },
      },
      "contracts": {
        "multicall3": {
          "address": "0xca11bde05977b3631167028862be2a173976ca11",
          "blockCreated": 81930,
        },
      },
      "fees": undefined,
      "formatters": undefined,
      "id": 421614,
      "name": "Arbitrum Sepolia",
      "nativeCurrency": {
        "decimals": 18,
        "name": "Arbitrum Sepolia Ether",
        "symbol": "ETH",
      },
      "rpcUrls": {
        "default": {
          "http": [
            "https://sepolia-rollup.arbitrum.io/rpc",
          ],
        },
      },
      "serializers": undefined,
      "testnet": true,
    },
    "createBlockFilter": [Function],
    "createContractEventFilter": [Function],
    "createEventFilter": [Function],
    "createPendingTransactionFilter": [Function],
    "estimateContractGas": [Function],
    "estimateFeesPerGas": [Function],
    "estimateGas": [Function],
    "estimateMaxPriorityFeePerGas": [Function],
    "extend": [Function],
    "getBalance": [Function],
    "getBlobBaseFee": [Function],
    "getBlock": [Function],
    "getBlockNumber": [Function],
    "getBlockTransactionCount": [Function],
    "getBytecode": [Function],
    "getChainId": [Function],
    "getCode": [Function],
    "getContractEvents": [Function],
    "getEip712Domain": [Function],
    "getEnsAddress": [Function],
    "getEnsAvatar": [Function],
    "getEnsName": [Function],
    "getEnsResolver": [Function],
    "getEnsText": [Function],
    "getFeeHistory": [Function],
    "getFilterChanges": [Function],
    "getFilterLogs": [Function],
    "getGasPrice": [Function],
    "getLogs": [Function],
    "getProof": [Function],
    "getStorageAt": [Function],
    "getTransaction": [Function],
    "getTransactionConfirmations": [Function],
    "getTransactionCount": [Function],
    "getTransactionReceipt": [Function],
    "key": "public",
    "multicall": [Function],
    "name": "Public Client",
    "pollingInterval": 4000,
    "prepareTransactionRequest": [Function],
    "readContract": [Function],
    "request": [Function],
    "sendRawTransaction": [Function],
    "simulateContract": [Function],
    "transport": {
      "fetchOptions": undefined,
      "key": "http",
      "name": "HTTP JSON-RPC",
      "request": [Function],
      "retryCount": 3,
      "retryDelay": 150,
      "timeout": 10000,
      "type": "http",
      "url": "https://sepolia-rollup.arbitrum.io/rpc",
    },
    "type": "publicClient",
    "uid": "test-uid",
    "uninstallFilter": [Function],
    "verifyMessage": [Function],
    "verifySiweMessage": [Function],
    "verifyTypedData": [Function],
    "waitForTransactionReceipt": [Function],
    "watchBlockNumber": [Function],
    "watchBlocks": [Function],
    "watchContractEvent": [Function],
    "watchEvent": [Function],
    "watchPendingTransactions": [Function],
  },
  "rpc": "https://sepolia-rollup.arbitrum.io/rpc",
  "subAccountId": 1,
  "verifierAddress": "0x27809a3Bd3cf44d855f1BE668bFD16D34bcE157C",
  "withdraw": [Function],
}
`;
